[SCRUM-147] refactor: GetResponse 생성 및 다층화